Wishlist in left column view is now in 2 columns (picture vs name). That's too small for image & text on smaller screens Fixed floating bug + changed 2col width distribution + changed product listing actions MASE2OT-25

--- a/Magento_Catalog/web/css/source/_extend.less
+++ b/Magento_Catalog/web/css/source/_extend.less
@@ -110,6 +110,24 @@
     }
 }
 
+.media-width(@extremum, @break) when (@extremum = 'min') and (@break = @screen__s) {
+    .product {
+        &-item {
+            &-actions {
+                .actions-primary + .actions-secondary {
+                    display: inherit;
+                    width: auto;
+                    padding: 0;
+                }
+                
+                .actions-primary {
+                    display: inherit;
+                }
+            }
+        }
+    }
+}
+
 .media-width(@extremum, @break) when (@extremum = 'min') and (@break = @screen__m) {
     .sidebar {
         .product-items {
@@ -118,6 +136,23 @@
                     .product-item-photo {
                         float: none;
                     }
+                }
+            }
+        }
+    }
+}
+
+.media-width(@extremum, @break) when (@extremum = 'min') and (@break = @screen__xl) {
+    .sidebar {
+        .product-items {
+            .product-item {
+                &-info {
+                    .product-item-photo {
+                        position: static;
+                    }
+                }
+                &-details {
+                    margin-left: 0;
                 }
             }
         }
